--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -10,9 +10,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
-    "typeRoots": ["./types", "node_modules/@types"],
-    "sourceMap": true,
-    "resolveJsonModule": true
+    "typeRoots": ["./types", "node_modules/@types"]
   },
   "include": ["./src"],
   "exclude": ["node_modules"]
