--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@mikro-orm/core": "^5.9.8",
     "@mikro-orm/postgresql": "^5.9.8",
+    "color-difference": "^0.3.4",
     "express": "^4.18.2",
     "winston": "^3.12.0",
     "yup": "^1.3.3"
